feature: implemented full functionality for add task

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             </fieldset>
                             <button class="btn btn-md add-btn" id="add-task"></button>
                         </form>
+                        <p class="error error-add"></p>
                     </div>
                     <div class="control-item search-task">
                         <form action="" class="form search-form">
@@ -42,6 +43,7 @@
                             </fieldset>
                             <button class="btn btn-md search-btn" id="search-btn"></button>
                         </form>
+                        <p class="error error-search"></p>
                     </div>
                     <div class="control-item filter-task">
                         <a class="filter-btn">
@@ -62,10 +64,9 @@
                     <div class="control-item reset-search">
                         <button class="btn btn-lg reset-btn" id="reset-search-btn">Reset search</button>
                     </div>
-                    <p class="error"></p>
                 </section>
                 <section id="tasks-container" class="tasks-container">
-                    <div class="tasks-wrap">
+                    <!-- <div class="tasks-wrap">
                         <form action="smth" class="form task-form">
                             <fieldset class="field-wrap">
                                 <div class="task-content">
@@ -85,7 +86,7 @@
                                 <button class="btn btn-sm btn-cancel" data-state="cancel-task"></button>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </section>
             </div>
         </main>
