--- a/index.html
+++ b/index.html
@@ -65,29 +65,7 @@
                         <button class="btn btn-lg reset-btn" id="reset-search-btn">Reset search</button>
                     </div>
                 </section>
-                <section id="tasks-container" class="tasks-container">
-                    <!-- <div class="tasks-wrap">
-                        <form action="smth" class="form task-form">
-                            <fieldset class="field-wrap">
-                                <div class="task-content">
-                                    <input type="checkbox" class="btn-status-complete" data-state="status-complete-task" checked="false">
-                                    <p class="field name-field" data-id="0">Go out</p>
-                                </div>
-                                <div class="task-info">
-                                    <p class="date-area" data-date="12.05.2020">12.05.2020</p>
-                                </div>
-                                <input type="text" class="field edit-name-field" data-id="0" value="Go out1">
-                            </fieldset>
-                            <div class="btn-group">
-                                <button class="btn btn-sm btn-status" data-state="status-task" data-status="1"></button>
-                                <button class="btn btn-sm btn-edit" data-state="edit-task"></button>
-                                <button class="btn btn-sm btn-delete-item" data-state="delete-task"></button>
-                                <button class="btn btn-sm btn-save" data-state="save-task"></button>
-                                <button class="btn btn-sm btn-cancel" data-state="cancel-task"></button>
-                            </div>
-                        </form>
-                    </div> -->
-                </section>
+                <section id="tasks-container" class="tasks-container"></section>
             </div>
         </main>
         <section class="controls-task-secondary fixed">
