feature: implemented 'remove completed' and 'remove all' functionality

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <fieldset class="field-wrap">
                                 <input type="text" class="search-field" id="search-field" placeholder="Search">
                             </fieldset>
-                            <button class="btn btn-md search-btn" id="search-btn"></button>
+                            <button class="btn btn-md search-btn" id="search-btn" disabled></button>
                         </form>
                         <p class="error error-search"></p>
                     </div>
